fix #10 - invalid content attr replacement
off by one in the replacement array. remove an unnecessary test by
absorbing it into the other (05 -> 02). fix inconsistencies in new line
file endings in t/stylesheets/*.css

bump VERSION and Changes for CPAN release

--- a/t/stylesheets/s9-expected.css
+++ b/t/stylesheets/s9-expected.css
@@ -1,2 +1,1 @@
-.x-ie8 .x-mask{
-background-image:url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7)}
+.x-ie8 .x-mask{background-image:url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7)}
