--- a/t/stylesheets/s9.css
+++ b/t/stylesheets/s9.css
@@ -1,3 +1,2 @@
 .x-ie8 .x-mask{
-    background-image:url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7)
-}
+    background-image:url(data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7)}
